# Programm-Entwurf-Softwareentwicklung

./: README.md
.devcontainer/: devcontainer.json
project_pirate/: CMakeLists.txt  main.c
project_pirate/include/: developer.h  developer_group.h  logo.h
project_pirate/src/: developer.c  developer_group.c  logo.c
